# rpg-bot

./: .env  Cargo.toml  diesel.toml
migrations/2024-12-25-054016_create_characters/: down.sql  up.sql
migrations/2024-12-25-065420_stats/: down.sql  up.sql
migrations/2024-12-25-181608_users/: down.sql  up.sql
src/: commands.rs  main.rs  models.rs  schema.rs
