[package]
name = "rpg-bot"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
anyhow = "1.0.68"
poise = "0.6.1"
shuttle-runtime = "0.49.0"
# Since poise is a serenity command framework, it can run on Shuttle with shuttle-serenity
shuttle-serenity = "0.49.0"
tracing = "0.1.37"
tokio = "1.26.0"
shuttle-shared-db = { version = "0.49.0", features = ["postgres", "diesel-async-bb8"] }
diesel = { version = "2.1.1", features = ["postgres"] }
diesel-async = "0.4.1"
rand = "0.8.5"
